--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@ permalink: /about/
     <p class="tagline">Software Engineer | Aspiring DevOps | TTRPG Player</p>
   </div>
   <div class="about-content">
-    <div class="bio-section">
+    <div class="bio-section text-justify">
       <h3>Who am I</h3>
       <p>
         Software engineer by day, currently working in the banking sector for a mobile banking team. 
-        At night, I transition into a tinkerer, bringing ideas to life—from maintaining my trusted 
-        <strong>Raspberry Pi</strong> container stack to developing "useless" but educational tools 
-        that push my boundaries.
+        At night, I like to play around to bring my ideas to life, whether it is to 
+        keep my trusted RaspberryPi up and running with its containers, 
+        or to develop stuff which is mainly useless but helps me learn stuff.
       </p>
     </div>
     <div class="skills-grid">
@@ -26,15 +26,15 @@ permalink: /about/
       </div>
       <div class="skill-card">
         <h4>DevOps & IaC</h4>
-        <p>Automation enthusiast using Jenkins, Docker, and Terraform to ensure reliable, automated deployments.</p>
+        <p>Automation is life, using Jenkins, Docker, and Terraform to ensure everything needs zero clicks.</p>
       </div>
       <div class="skill-card">
         <h4>Observability</h4>
-        <p>The "Zero Downtime" guy, leveraging Splunk and Dynatrace for rock-solid monitoring and alerting.</p>
+        <p>"Zero Downtime" guy, leveraging Splunk and Dynatrace for monitoring and alerting.</p>
       </div>
       <div class="skill-card">
         <h4>Apple Academy Alumnus</h4>
-        <p>Native mobile development with Swift and backend services using Vapor, born in Naples' Developer Academy.</p>
+        <p>Native mobile development with Swift and backend services using Vapor</p>
       </div>
     </div>
     <div class="knowledge-table-container">
@@ -55,12 +55,13 @@ permalink: /about/
         </tbody>
       </table>
     </div>
-    <div class="bio-section extra-passions">
+    <div class="bio-section extra-passions text-justify">
       <h3>Under the hood</h3>
       <p>
-        Beyond the terminal, I'm a veteran <strong>D&D player</strong> (10+ years), a photography enthusiast, 
-        and a guitar player. I also have a refined taste for <em>really bad movies</em>—Maestro Bruno Mattei 
-        is a personal legend.
+        Not only a techie, I've also lots of other passions! I like to play video games a lot, League of Legends has been a really bad rabbit hole for me in the past.
+        Same goes for TTRPGs, I've played D&D for like 10+ years. Also, I like playing guitar even though I don't play as much as I used to do in the past.
+        Then, I love photography and photo editing, so don't be surprised if you will see here some travel posts with pictures I've taken.
+        Last but not least, I love bad (like <em>really bad</em>) movies.
       </p>
     </div>
     <div class="contact-section">
