feat: add reading progress bar and custom footer

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ permalink: /about/
 <section class="about-container">
   <div class="about-header">
     <h1 class="post-title-display">Salvatore Penitente</h1>
-    <p class="tagline">Software Engineer | Aspiring DevOps | TTRPG Player</p>
+    <p class="tagline">Software Engineer | Wannabe DevOps | TTRPG Player</p>
   </div>
   <div class="about-content">
     <div class="bio-section text-justify">
